kubernetes/services/whisper/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whisper
  labels:
    name: whisper
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
